--- a/ballerina/Dependencies.toml
+++ b/ballerina/Dependencies.toml
@@ -5,7 +5,7 @@
 
 [ballerina]
 dependencies-toml-version = "2"
-distribution-version = "2201.10.0-20240814-150200-0e916265"
+distribution-version = "2201.9.3"
 
 [[package]]
 org = "ballerina"
@@ -140,7 +140,7 @@ dependencies = [
 [[package]]
 org = "ballerinax"
 name = "copybook"
-version = "0.2.1"
+version = "0.3.0"
 dependencies = [
 	{org = "ballerina", name = "constraint"},
 	{org = "ballerina", name = "file"},
